# ferrix-native

./: .gitignore  Cargo.toml
apps/macos/Ferrix/Ferrix/: ContentView.swift  FerrixApp.swift
apps/macos/Ferrix/Ferrix.xcodeproj/: project.pbxproj
apps/macos/Ferrix/Ferrix.xcodeproj/project.xcworkspace/xcuserdata/mehrantaslimi.xcuserdatad/: UserInterfaceState.xcuserstate
apps/macos/Ferrix/Ferrix.xcodeproj/xcuserdata/mehrantaslimi.xcuserdatad/xcschemes/: xcschememanagement.plist
crates/ferrix-uniffi/: Cargo.toml  build.rs
crates/ferrix-uniffi/src/: ferrix.udl  lib.rs
scripts/: gen-swift-bindings.sh
