[workspace]
resolver = "2"

members = [
    "crates/ferrix-uniffi",
    # "crates/ferrix-core",
    # "crates/ferrix-ports",
    # "crates/ferrix-platform",
    # "crates/ferrix-api",
    # "crates/ferrix-ffi-c",
    # "crates/ferrix-cli",
]

exclude = ["apps/macos", "apps/windows", "bindings", "dist"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/mehranTaslimi/ferrix-native"
rust-version = "1.91.1"

[workspace.dependencies]
uniffi = "0.30"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
