[package]
name = "ferrix-uniffi"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "ferrix_uniffi"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
